syntax = "proto3";

package greet;

option java_package="com.proto.greet";
option java_multiple_files = true;

message Greeting {
	string firt_name=1;
	string last_name=2;
}

message GreetRequest {
	Greeting greeting = 1;
}

message GreetResponse {
	string result = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}

message GreetManyTimesResponse {
	string result = 1 ;
}

message LongGreatRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

service GreetService {
    //Unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};
	
	//Server Streamimg
	rpc  GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
	
	//Client Streaming 
	rpc LongGreet(stream LongGreatRequest) returns (LongGreetResponse) {};
	
	//Bi-Di Streamimg
	rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}